fix bg image not showing bug

--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ ul {
 }
 
 .paperOverlay {
-    background-image: url("/img/texture.png");
+    background-image: url("./img/texture.png");
     background-repeat: repeat;
     bottom: 0;
     left: 0;
